// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Applications Cert-Manager application shows the correct description 1`] = `
<p
  data-testid="certManagerDescription"
>
  Cert-Manager is a native Kubernetes certificate management controller that helps with issuing certificates. Installing Cert-Manager on your cluster will issue a certificate by 
  <a
    class="gl-link"
    href="https://letsencrypt.org/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Let's Encrypt
  </a>
   and ensure that certificates are valid and up-to-date.
</p>
`;

exports[`Applications Cilium application shows the correct description 1`] = `
<p
  data-testid="ciliumDescription"
>
  Protect your clusters with GitLab Container Network Policies by enforcing how pods communicate with each other and other network endpoints. 
  <a
    class="gl-link"
    href="cilium-help-path"
    rel="noopener"
    target="_blank"
  >
    Learn more about configuring Network Policies here.
  </a>
</p>
`;

exports[`Applications Crossplane application shows the correct description 1`] = `
<p
  data-testid="crossplaneDescription"
>
  Crossplane enables declarative provisioning of managed services from your cloud of choice using 
  <code>
    kubectl
  </code>
   or 
  <a
    class="gl-link"
    href="https://docs.gitlab.com/ee/user/clusters/applications.html#crossplane"
    rel="noopener noreferrer"
    target="_blank"
  >
    GitLab Integration
  </a>
  . Crossplane runs inside your Kubernetes cluster and supports secure connectivity and secrets management between app containers and the cloud services they depend on.
</p>
`;

exports[`Applications Ingress application shows the correct warning message 1`] = `
<span
  data-testid="ingressCostWarning"
>
  Installing Ingress may incur additional costs. Learn more about 
  <a
    class="gl-link"
    href="https://cloud.google.com/compute/pricing#lb"
    rel="noopener noreferrer"
    target="_blank"
  >
    pricing
  </a>
  .
</span>
`;

exports[`Applications Knative application shows the correct description 1`] = `
<span
  data-testid="installed-via"
>
  installed via 
  <a
    class="gl-link"
    href=""
    rel="noopener"
    target="_blank"
  >
    Cloud Run
  </a>
</span>
`;

exports[`Applications Prometheus application shows the correct description 1`] = `
<span
  data-testid="prometheusDescription"
>
  Prometheus is an open-source monitoring system with 
  <a
    class="gl-link"
    href="https://docs.gitlab.com/ee/user/project/integrations/prometheus.html"
    rel="noopener noreferrer"
    target="_blank"
  >
    GitLab Integration
  </a>
   to monitor deployed applications.
</span>
`;
